# Starting with PEP 621 (June 2020), the Python community selected pyproject.toml as a
# standard way of specifying project metadata. Setuptools has adopted this
# standard and will use the information contained in this file as an input in
# the build process.
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
requires = ["setuptools>=45",
            "setuptools-scm>=6.2",
            "wheel",
            # Cython extensions
            "extension-helpers",
            "Cython"
            ]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
description = "Python project template for Gitpod and VSCode"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["template", "python", "gitpod", "vscode"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

dynamic = ["version"]

[tool.setuptools_scm]
# write_to = "src/my_package/__version__.py"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]                  # list of folders that contain the packages (["."] by default)
include = ["my_package*"]        # package names should match these glob patterns (["*"] by default)
exclude = ["my_package.tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = true                # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
# Examples
# "*" = ["*.txt"]
#my_package = ["*.txt", "*.rst"]
#my_package.data = ["*.txt", "*.rst"]  # for subfolder of my_package

[project.optional-dependencies]

testing = [
    "pytest",
    "pytest-doctestplus",
    "flake8",
    "codecov",
    "pytest-cov"]

ci = [
  "toml",
  "yapf"]

docs = [
  "sphinx",
  "sphinx-automodapi",
  "numpydoc"]


# [project.scripts]
# my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/